stage0/tests/snapshots/program__tests_fixtures_programs_basic_trailing_arg_comma.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/trailing_arg_comma.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
trailing comma
stderr:
<empty>
