stage0/tests/snapshots/program__tests_fixtures_programs_basic_tuple_patterns.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/tuple_patterns.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
seven
3
stderr:
<empty>
