stage0/tests/snapshots/program__tests_fixtures_programs_basic_tuple_projection.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/tuple_projection.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
literal
2
riot
20
stderr:
<empty>
