stage0/tests/snapshots/program__tests_fixtures_programs_basic_variant_payload_pattern_literal.snap
---
source: tests/fixtures.rs
assertion_line: 1431
expression: transcript
---
fixture: tests/fixtures/programs/basic/variant_payload_pattern_literal.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
one,two,none
stderr:
<empty>
