stage0/tests/snapshots/program__tests_fixtures_programs_basic_variant_payloads.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/variant_payloads.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Some(41)
Pair(1, one)
None
stderr:
<empty>
