stage0/tests/snapshots/program__tests_fixtures_programs_basic_while_false_skips_body.snap
---
source: tests/fixtures.rs
assertion_line: 4999
expression: transcript
---
fixture: tests/fixtures/programs/basic/while_false_skips_body.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
done
stderr:
<empty>
