stage0/tests/snapshots/program__tests_fixtures_programs_basic_while_nested_false.snap
---
source: tests/fixtures.rs
assertion_line: 5068
expression: transcript
---
fixture: tests/fixtures/programs/basic/while_nested_false.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
done
stderr:
<empty>
