stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0002_let_with_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0002_let_with_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Alice
stderr:
<empty>
