stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0004_multiple_lets.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0004_multiple_lets.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
2
stderr:
<empty>
