stage0/tests/snapshots/program__tests_fixtures_programs_imported_syn_0014_float_exponent.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/imported/syn/0014_float_exponent.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1.5e10
stderr:
<empty>
